--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "config-lite": "^1.5.0",
     "cross-env": "^3.1.4",
     "ejs": "^2.5.5",
+    "gravatar": "^1.6.0",
     "koa": "^1.2.5",
     "koa-bodyparser": "^2.3.0",
     "koa-errorhandler": "^0.1.1",
@@ -28,8 +29,10 @@
     "koa-router-cache": "^2.0.0",
     "koa-scheme": "^2.2.1",
     "koa-static-cache": "^3.2.0",
+    "koa-views": "^5.2.0",
     "merge": "^1.2.0",
     "merge-descriptors": "^1.0.1",
+    "moment": "^2.17.1",
     "mongoose": "^4.8.2",
     "validator": "^6.2.1"
   }
