--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.4.7",
     "co-cache": "^2.3.0",
     "co-ejs": "^1.5.2",
     "co-views": "^2.1.0",
@@ -34,6 +35,8 @@
     "merge-descriptors": "^1.0.1",
     "moment": "^2.17.1",
     "mongoose": "^4.8.2",
+    "nodemailer": "^3.1.3",
+    "utility": "^1.11.0",
     "validator": "^6.2.1"
   }
 }
